Bug 326798 - Parley Editor scripts do not load with Editor itself
Summary: Parley Editor scripts do not load with Editor itself
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.9.4
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: parley bug tracker
URL:
Keywords:
: 230608 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-10-28 20:29 UTC by Yuri Chornoivan
Modified: 2013-11-05 14:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yuri Chornoivan 2013-10-28 20:29:43 UTC
Parley editor scripts (Google Images and Wiktionary Sounds) do not load with Parley Editor (though they are enabled by default).

Reproducible: Always

Steps to Reproduce:
1. Open some dictionary for editing.
2. Choose "Scripts" from the main window menu (there are no items for Python scripts).
3. Choose "Scripts -> Script Manager" from the menu.
4. Untick (or tick) the checkbox for "Example Parley Script", push "OK".
5. Choose "Scripts" from the main window menu (the items for Python scripts appear).
Actual Results:  
It takes to make some voodoo to reach the scripts.

Expected Results:  
As the scripts are enabled and working by default (in git/master and KDE/4.11 branches) their items should be shown in the "Scripts" menu right after the Editor is started.

Thanks for fixing this bug.
Comment 1 José Manuel Santamaría Lema 2013-10-29 17:20:45 UTC
*** Bug 230608 has been marked as a duplicate of this bug. ***
Comment 2 José Manuel Santamaría Lema 2013-10-30 13:28:48 UTC
Git commit 3cb09a48e7483df537e6b4a9d46f5bbaa7d6aeee by José Manuel Santamaría Lema.
Committed on 30/10/2013 at 13:12.
Pushed by joselema into branch 'KDE/4.11'.

Delay the initialization of the init scripts.

This fixes a bug (the plugins weren't listed in the Scripts menu) and also
improves performance.

REVIEW: 113501

M  +3    -1    src/editor/editor.cpp
M  +1    -1    src/editor/editor.h

http://commits.kde.org/parley/3cb09a48e7483df537e6b4a9d46f5bbaa7d6aeee