Delay the initialization of the init scripts.

This fixes a bug (the plugins weren't listed in the Scripts menu) and also
improves performance.

REVIEW: 113501
BUG: 326798